RESOLVED FIXED199430
REGRESSION (iOS 13): Tapping an element with a click event handler no longer clears the selection
https://bugs.webkit.org/show_bug.cgi?id=199430
Summary REGRESSION (iOS 13): Tapping an element with a click event handler no longer ...
Wenson Hsieh
Reported 2019-07-02 20:21:51 PDT
This makes it nearly impossible to truly dismiss a text selection on a New York Times article, Google search results page, and other big websites. I wrote “truly dismiss” because while it looks like the UIKit selection view disappears upon tapping, the DOM selection remains the same. To reproduce: 1. Go to any New York Times article. 2. Make a text selection. 3. Try to dismiss the text selection by tapping on some other text. Notice that the blue tinted selection view disappears. 4. Open Web Inspector and type “getSelection().toString()”. Expected: Empty string. Observed: The originally selected text.
Attachments
Patch (13.81 KB, patch)
2019-07-03 08:22 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-07-03 08:22:16 PDT
Radar WebKit Bug Importer
Comment 2 2019-07-03 08:23:15 PDT
Tim Horton
Comment 3 2019-07-03 12:26:50 PDT
Comment on attachment 373390 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373390&action=review > Source/WebCore/ChangeLog:8 > + After <trac.webkit.org/r245067>, we no longer immediately clear the text selection when recognizing a single tap Whoops > Source/WebCore/ChangeLog:24 > + breaking the fix in r233311 by matching macOS behavior and not bailing via early return in the case where the Very nice!
WebKit Commit Bot
Comment 4 2019-07-03 12:59:08 PDT
Comment on attachment 373390 [details] Patch Clearing flags on attachment: 373390 Committed r247100: <https://trac.webkit.org/changeset/247100>
WebKit Commit Bot
Comment 5 2019-07-03 12:59:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.